--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,16 @@
 {
   "name": "hunster-web",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "animated-number-react": "^0.1.2",
     "react": "^18.2.0",
-    "react-awesome-reveal": "^4.1.0",
-    "react-countup": "^6.4.0",
+    "react-awesome-reveal": "^4.2.7",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
